Add a preliminary category to guidelines.

--- a/content/guidelines/002.md
+++ b/content/guidelines/002.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Andmete salvestamisel tuleb võimalusel eelistada andmete salvestamist
 teenusserverisse, mitte kasutaja nutiseadmesse (eeldusel, et nutiseadme ja
 serveri vahel on turvaline võrguühendus). Lihtsam on tagada andmete turvaline
