--- a/content/guidelines/004.md
+++ b/content/guidelines/004.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Tundlikke andmeid (eriti autentimisvõtmeid ja paroole) võib seadmesse ja selle
 vahemällu salvestada ainult krüpteeritud kujul. Võimaluse korral tuleks need
 salvestada muutmiskindlasse (tamper-proof) mälualasse.
