--- a/content/guidelines/006.md
+++ b/content/guidelines/006.md
@@ -1,2 +1,5 @@
+---
+category: data
+---
 Asukohaandmeid või muud tundlikku teavet ei tohi salvestada seadmesse kauemaks,
 kui on vajalik rakenduse tööks.
