--- a/content/guidelines/007.md
+++ b/content/guidelines/007.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Alati tuleb eeldada, et seadmes olev jagatud salvestusruum on ebausaldusväärne
 ja sellest võivad andmed kergelt või ootamatutel viisil lekkida st on ohustatud
 andmete terviklus (integrity), konfidentsiaalsus ja käideldavus.
