--- a/content/guidelines/008.md
+++ b/content/guidelines/008.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Andmete salvestamisel tuleb määrata nende maksimaalne säilitusperiood, mille
 möödumisel  tuleb need andmed automaatselt seadmest kustutada (et nt vältida
 andmete püsivat vahemällu jäämist).
