--- a/content/guidelines/009.md
+++ b/content/guidelines/009.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Salvestatud andmete krüpteerimine ja võtmehaldus on oluline, sest seni puudub
 standardne turvaline failide kustutamisprotseduur välkmälul baseeruvatest
 salvestusseadmetest. Kustutamisel failid märgitakse küll kustutatuks, aga
