--- a/content/guidelines/011.md
+++ b/content/guidelines/011.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Rakenduse planeerimisfaasis tuleb välja selgitada rakenduse eesmärkide
 saavutamiseks vajaminevad andmed sh isikuandmed, nende täpne kogumise ja
 säilitamise vajadus ning konfidentsiaalsusaste. Andmete kasutamisel tuleb
