--- a/content/guidelines/012.md
+++ b/content/guidelines/012.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Rakendused vajavad seadmes töötamiseks enamasti komplekti kasutaja poolt
 antavaid eriõiguseid (app permissions). Enne iga õiguse küsimist tuleks
 põhjalikult kaaluda selle vajalikkust ning loobuda nende õiguste „igaks juhuks“
