--- a/content/guidelines/014.md
+++ b/content/guidelines/014.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Lisaturvalisuse saavutamiseks võib arendaja rakendusse lisada võimaluse
 andmete kustutamiseks kaugjuhtimise teel, et vajadusel oleks võimalik andmete
 kustutamine eraldi igas seadmes kuhu rakendus paigaldatud on (sellise võimaluse
