--- a/content/guidelines/015.md
+++ b/content/guidelines/015.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Peale seda kui kasutaja on algselt rakenduses tuvastatud tuleks edaspidi
 paroolide asemel kasutada ligipääsuvõtmeid (authorization tokens). Need peavad
 olema seadmesse turvaliselt salvestatud, neil peab olema kindlaksmääratud
