--- a/content/guidelines/016.md
+++ b/content/guidelines/016.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Autoriseerimisvõtmete võrgu kaudu edastamisel tuleb kasutada krüpteeritud
 andmevahetuskanalit (SSL/TLS abil, soovitavalt vähemalt TLS 1.0). Kasutada tuleb
 kõige uuemaid autoriseerimisstandardeid (nt delegeeritud ristautentimise
