--- a/content/guidelines/017.md
+++ b/content/guidelines/017.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Paroole ei tohi seadmesse kunagi salvestada lahtise tekstina. Kui paroole on
 vaja seadmesse salvestada, siis tuleb kasutada seadme operatsioonisüsteemi poolt
 pakutavaid krüpteerimis- ja võtmehalduslahendusi.
