--- a/content/guidelines/018.md
+++ b/content/guidelines/018.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Rakenduse kasutajal peab olema rakendusesisene paroolide muutmise võimalus. Kõik
 kasutaja poolt valitud uued paroolid tuleb üle kontrollida, et tagada nende
 piisav keerukus (sh ka visuaalsete paroolide keerukus).
