--- a/content/guidelines/019.md
+++ b/content/guidelines/019.md
@@ -1,2 +1,5 @@
+---
+category: data
+---
 Andmete regulaarsel varundamisel peab paroolid ja autoriseerimistunnused
 sellesse kaasata ainult krüpteeritud või räsitud kujul.
