--- a/content/guidelines/021.md
+++ b/content/guidelines/021.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Nutiseadmete puuteekraanidel tehtud näpuliigutused jätavad endast maha jäljed,
 mille järgi on vahel tagantjärgi võimalik tuvastada seadmega tehtud tegevusi.
 Vajadusel tuleb selle raskendamiseks kasutada selliseid ekraanivorme, mille
