--- a/content/guidelines/022.md
+++ b/content/guidelines/022.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Paroole ja muud mitteavalikku infot ei tohi sisse kirjutada mobiilrakenduse
 koodi, sest mobiilirakenduste kompileeritud binaarfailidest on võimalik lihtsalt
 taastada rakenduse algne lähtekood. Ka rakenduse liidestamisel teenusserveritega
