--- a/content/guidelines/023.md
+++ b/content/guidelines/023.md
@@ -1,2 +1,5 @@
+---
+category: authentication
+---
 Kasutajal peab olema võimalus rakendusest välja logimiseks ning kõikide
 ligipääsuvõtmete (tokens) eemaldamiseks.
