--- a/content/guidelines/025.md
+++ b/content/guidelines/025.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Tuleb kasutada kaasaegseid ja tugevaid, hästituntud krüpteerimisalgoritme (nt
 AES) ning konkreetseks vajaduseks sobivaid optimaalse pikkusega
 krüpteerimisvõtmeid.
