--- a/content/guidelines/026.md
+++ b/content/guidelines/026.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Kasutada tohib ainult usaldusväärsete sertifitseerimiskeskuste poolt
 allkirjastatud turvasertifikaate. Tuleb olla ettevaatlik omaallkirjastatud
 (self-signed) turvasertifikaatide lubamisel. SSL ühendusahela kontrollimist
