--- a/content/guidelines/028.md
+++ b/content/guidelines/028.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Rakenduse kasutajaliides peaks võimaldama turvasertifikaadi kehtivuse
 väljaselgitamist (kuigi kasutaja peaks seda võimalust üldjuhul nägema alles
 potentsiaalse veaolukorra puhul).
