--- a/content/guidelines/031.md
+++ b/content/guidelines/031.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Rakendusse sisenemiseks kasutatava autentimismehhanismi tugevus peab sõltuma
 sellest, kui tundlikke andmeid rakendus töötleb (nt isikuandmed, rahalised
 toimingud). Kui kasutaja omale rakenduse või pilveteenuse parooli valib, siis on
