--- a/content/guidelines/032.md
+++ b/content/guidelines/032.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Pärast esmast autentimist peab ka edasine rakenduse sessioonihaldus toimuma
 turvalisel viisil, seda tagavate sobivate turvaprotokollide vahendusel. Näiteks
 kasutada autoriseerimistunnuste korduvsaatmist igal päringul (eriti kui päring
