--- a/content/guidelines/033.md
+++ b/content/guidelines/033.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Kasutatavad rakenduse sessiooniidentifikaatorid peaks olema sellised, mida on
 keeruline ära arvata ja mida ei saa ise konstrueerida või tuletada teiste
 kasutussessioonide identifikaatoritest. Tuleb arvestada, et juhuarvude
