--- a/content/guidelines/035.md
+++ b/content/guidelines/035.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Vajadusel tuleb kaaluda 2-astmelist autentimist, st lisada autentimise
 protseduurile täiendavaid turvameetmeid, nt SMS kinnituskoodid, spetsiaalse
 võtmegenereerimise rakenduse või PIN-kalkulaatori kasutamine. Lisaks vajadusel
