--- a/content/guidelines/039.md
+++ b/content/guidelines/039.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Rakenduse kood tuleb põhjalikult üle kontrollida, et ei toimuks andmete, sh
 isikuandmete soovimatut edastamist mobiilseadmest teenusserverisse või muudesse
 välistesse liidestesse (nt kas edastatavate failide metaandmed sisaldavad
