--- a/content/guidelines/040.md
+++ b/content/guidelines/040.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Serverites asuvatele teenusliidestele tuleks süsteemselt korraldada
 turvatestimist, kasutades turvadefektide leidmiseks ka automaatteste,
 koodianalüsaatoreid ja ründetestimise vahendeid.
