--- a/content/guidelines/043.md
+++ b/content/guidelines/043.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Teenustõkkerünnetest tingitud riskide vähendamiseks tuleks kasutada
 kasutajakontode või IP-aadresside põhist andmeedastuskiiruse vähendamist ja
 sessioonide arvu piiramist.
