--- a/content/guidelines/045.md
+++ b/content/guidelines/045.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Veebipõhistel teenusliidestel (Web Services, REST teenused, API-d) võivad
 esineda samasugused nõrgad kohad nagu muudel veebirakendustel ja neid tuleb
 samapõhjalikult testida. Ka liideste testimisel tuleb testida nii positiivseid
