--- a/content/guidelines/046.md
+++ b/content/guidelines/046.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Kontrollida tuleb kõikide kasutatavate tarkvara valmiskomponentide turvalisust
 ning autentsust (veenduge, kas komponendid pärinevad usaldusväärsest allikast ja
 need ei sisalda võimalikke tagauksi ega pahavara).
