--- a/content/guidelines/047.md
+++ b/content/guidelines/047.md
@@ -1,2 +1,5 @@
+---
+category: app
+---
 Jälgida tuleb kasutatud valmiskomponentide turvaparandusi ja tarkvarauuendusi.
 Nende ilmumisel tuleb teha vastavad uuendused ka mobiilirakenduses.
