--- a/content/guidelines/048.md
+++ b/content/guidelines/048.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Erilist tähelepanu tuleb pöörata kõikidest ebausaldusväärsetest kolmandate
 osapoolte rakendustest (nt reklaamivõrgu tarkvara) vastu võetud või neisse
 saadetavatele andmetele (enne nende andmete kasutamist rakenduses).
