--- a/content/guidelines/049.md
+++ b/content/guidelines/049.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Tuleb luua isikuandmete kasutamist käsitlevad privaatsustingimused ja teha need
 kasutajale kättesaadavaks. Rakenduses peab olema kirjeldus selle kohta milline
 on isikuandmete töötlemise kord ja kuidas isikuandmeid kaitstakse.
