--- a/content/guidelines/052.md
+++ b/content/guidelines/052.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Tuleb kontrollida rakenduse andmesidet, et tuvastada, kas esineb ettekavatsemata
 andmelekkeid isikuandmete kohta (nt piltide metaandmed pildistamise asukoha
 kohta).
