--- a/content/guidelines/053.md
+++ b/content/guidelines/053.md
@@ -1,2 +1,5 @@
+---
+category: authentication
+---
 Isikutuvastusteabe edastamise nõusolek tuleb salvestada ja säilitada. See info
 kasutaja kohta peab olema hiljem kättesaadav.
