--- a/content/guidelines/055.md
+++ b/content/guidelines/055.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Rakenduses kasutajalt võetud kasutustingimustega nõusolek ei tohi olla vastuolus
 mõne teise sama teenusepakkuja poolt küsitava nõusolekuga (nt mida küsitakse
 sama teenuse veebiversioonis). Kirjeldatud isikuandmete töötlemise kord peab
