--- a/content/guidelines/057.md
+++ b/content/guidelines/057.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Delikaatsete isikuandmete (näiteks terviseandmete) töötlemine tuleb
 registreerida AKIs. Soovitav on kahtluse korral täpsustada AKIga, kas on
 tegemist delikaatsete isikuandmetega.
