--- a/content/guidelines/058.md
+++ b/content/guidelines/058.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Rakenduse poolt nutitelefoni tasuliste funktsioonide (kõned, SMS, NFC maksed
 jne) juurdepääsu ja kasutamise kohta tuleb pidada selges vormingus logisid (need
 võib saata ka teenusserverisse, kasutaja nõusolekul) ja need tuleb teha
