--- a/content/guidelines/059.md
+++ b/content/guidelines/059.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Tuleb kontrollida ebaharilikke kasutusmustreid seadme tasuliste funktsioonide
 kasutamisel. Ebaharilike olukordade ilmnemisel, näiteks juhul kui kasutaja
 asukoht on olulisel määral muutunud, muudetakse rakenduse kasutuskeelt vms,
