--- a/content/guidelines/060.md
+++ b/content/guidelines/060.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Kõik API-pöördumised seadme funktsioonidele, mis kasutavad tasulisi teenuseid,
 tuleb autentida (nt rakenduse väljatöötaja sertifikaadi abil). Tuleb
 kontrollida, et tasuliste teenuste API vastused ei edastaks lahtise tekstina
