--- a/content/guidelines/062.md
+++ b/content/guidelines/062.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Tasuliste teenuste kasutamisel tuleb jälgida, et kasutajale kaasnev rahaline
 kulu oleks võimalikult väike ja kasutatakse kõiki võimalusi selle saavutamiseks.
 Nt minimeerida tuleb võrgus liikuvad andmehulgad, kasutada ära andmete vahemällu
