--- a/content/guidelines/063.md
+++ b/content/guidelines/063.md
@@ -1,2 +1,5 @@
+---
+category: app
+---
 Rakendused peavad olema loodud ja kasutajatele paigaldatud selliselt, et on
 võimalik nendele tarkvarauuenduste lisamine.
