--- a/content/guidelines/064.md
+++ b/content/guidelines/064.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Rakenduse uuendatud versioonide kättesaadavaks tegemisel läbi rakendustepoe
 tuleb võtta arvesse rakenduse aktsepteerimise protsessist tekkivaid võimalikke
 lisaviivitusi.
