--- a/content/guidelines/067.md
+++ b/content/guidelines/067.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Tuleb tagada, et peale rakenduse valmimist ja avalikustamist oleks sellele
 saadavad regulaarsed tarkvarauuendused (minimaalselt vähemalt kõik turvalisusega
 seotud vajalikud uuendused).
