--- a/content/guidelines/068.md
+++ b/content/guidelines/068.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Rakendus peab kontrollima kõiki sisendandmeid. Mittesobivas formaadis andmete
 kohta tuleb kasutajale kuvada veateade või konverteerida need sobivasse
 formaati.
