--- a/content/guidelines/069.md
+++ b/content/guidelines/069.md
@@ -1,2 +1,5 @@
+---
+category: data
+---
 Rakenduse sisendandmete turvalisuse tagamiseks tuleb kasutada vastava olukorra
 jaoks sobivat katkestussüntaksit (escape syntax).
