--- a/content/guidelines/070.md
+++ b/content/guidelines/070.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Rakenduses sisalduv koodiinterpretaator peab töötama minimaalselt vajalike
 õigustega, et rakenduse vahendusel ei saaks teostada suuremaid õiguseid nõudvaid
 toiminguid (nt juhul kui rakendust proovib ära kasutada pahavara või sellesse
