--- a/content/guidelines/071.md
+++ b/content/guidelines/071.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Rakenduses olevatele sisendkoodi interpreteerivatele osadele tuleb teha
 ründetaluvuse test. Sisendkoodi interpreerivad osad tuleks paigutada nn
 liivakasti-režiimi (sandboxed mode).
