--- a/content/guidelines/073.md
+++ b/content/guidelines/073.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Autentimisel või allkirjastamisel kuvatav Mobiil-ID kinnituskood peab olema
 selgelt nähtaval ja eraldatud kohal. Kinnituskood ei tohi jääda ekraani serva
 taha ja kasutajal peab olema võimalus ja piisav aeg selle koodi nägemiseks ka
