--- a/content/guidelines/075.md
+++ b/content/guidelines/075.md
@@ -1,4 +1,6 @@
-
+---
+category: data
+---
 Allkirjastamisel on soovitav kasutada digitaalallkirja BDOC vormingut ja
 kasutada ECC krüptoalgoritmidel põhinevaid elliptiliste kurvidega (ECC)
 Mobiil-ID sertifikaate (kohustuslik alates 01.01.2015).
