--- a/content/guidelines/077.md
+++ b/content/guidelines/077.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Mobiilirakenduses ei ole mõtet dubleerida sama teenuse veebiversiooni
 funktsionaalsust. Lähtuda tuleb olukordadest kus kasutajal on nutiseadme
 kasutamine mugav või ainus võimalus. Nt kalendrisündmustest teavitamine, info
