--- a/content/guidelines/078.md
+++ b/content/guidelines/078.md
@@ -1,3 +1,6 @@
+---
+category: ux
+---
 Kui nutirakendus on üks mitmest vastava teenuse kasutamise kanalist, siis peaks
 rakenduse kasutajaliides olema kasutaja jaoks äratuntava kujundusega (nt järgima
 samasugust kujundusloogikat nagu sama teenuse teised kasutuskanalid –
