--- a/content/guidelines/080.md
+++ b/content/guidelines/080.md
@@ -1,3 +1,6 @@
+---
+category: ux
+---
 Rakenduse avamisel ei tohiks koheselt käivitada mahukat andmelaadimist vaid
 küsida selleks kasutaja nõusolekut. Samuti ei ole heaks tavaks automaatne heli
 või video käivitamine.
