--- a/content/guidelines/081.md
+++ b/content/guidelines/081.md
@@ -1,3 +1,6 @@
+---
+category: ux
+---
 Kasutajaliides peaks olema võimalikult iseenesestmõistetav, kui aga on vaja
 kasutajat spetsiaalselt juhendada, siis need juhendid peavad olema võimalikult
 lühikesed ja arusaadava sõnastusega.
