--- a/content/guidelines/082.md
+++ b/content/guidelines/082.md
@@ -1,3 +1,6 @@
+---
+category: ux
+---
 Nutirakenduste sisestusvormide juures tuleb arvestada, et teksti sisestamine ei
 ole nii mugav kui arvutis. Sisestusväljale sisestama asudes tuleb kasutajale
 anda ette õiget tüüpi klaviatuur (nt numbriväljale sisestades selline klaviatuur
