--- a/content/guidelines/084.md
+++ b/content/guidelines/084.md
@@ -1,3 +1,6 @@
+---
+category: ux
+---
 Parima kasutuskogemuse saavutamiseks on oluline rakenduse töökiirus, st rakendus
 peab olema optimeeritud, et see oleks piisavalt kiire ja kasutaja tegevustele
 võimalikult kiiresti reageeriv. Aeganõudvate toimingute puhul peab kasutajale
