--- a/content/guidelines/085.md
+++ b/content/guidelines/085.md
@@ -1,2 +1,5 @@
+---
+category: ux
+---
 Rakenduse taaskäivitamisel võiks rakenduse töö jätkuda eelnevast kohast, st
 kasutussessiooni tuleks vastav info tuleks salvestada.
