--- a/content/guidelines/087.md
+++ b/content/guidelines/087.md
@@ -1,2 +1,5 @@
+---
+category: ux
+---
 Andmete rakendusse sisestamine peab olema võimalik samades keeltes nagu
 teenusepakkuja muudes sama teenuse teenuskanalites.
