--- a/content/guidelines/001.md
+++ b/content/guidelines/001.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Nutirakenduse väljatöötamisel tuleb tellija poolt selgitada selles kasutatavate
 andmete, sh isikuandmete, tundlikkuse tase (nt paroolid, asukohaandmed,
 rakenduse töölogid). Sellest lähtuvalt tuleb kasutusele võtta sobivad
