--- a/content/guidelines/003.md
+++ b/content/guidelines/003.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Andmete nutiseadmesse salvestamisel tuleks kasutada seadme operatsioonisüsteemi
 poolt pakutavat failide krüpteerimise API-t või mõne usaldusväärse
 tarkvaratootja vastavat lahendust.
