--- a/content/guidelines/005.md
+++ b/content/guidelines/005.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Kaaluda tuleb seadme hetkekontekstil põhinevate juurdepääsupiirangute
 rakendamist, nt seadme asukoha alusel (nt mobiilimaksete rakendust ei saa
 kasutada, kui nutiseade asub väljaspool Euroopat jne).
