--- a/content/guidelines/010.md
+++ b/content/guidelines/010.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Rakenduse loomisel tuleb arvesse võtta kogu andmete elutsükli turvalisust (nende
 kogumine võrgu kaudu, ajutine kettale või vahemällu salvestamine, varundamine,
 kustutamine jne).
