--- a/content/guidelines/013.md
+++ b/content/guidelines/013.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Andmekirjete juures tuleks alati kasutada unikaalseid identifitseerimiskoode,
 mis ei ole jagatud teiste rakendustega. Identifikaatorina ei ole soovitav
 kasutada ka nutiseadme identifitseerimiskoodi (kui selleks pole mõjuvat põhjust)
