--- a/content/guidelines/024.md
+++ b/content/guidelines/024.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Tundliku teabe saatmisel igasuguse arvutivõrgu kaudu võib kasutada ainult
 turvalisi andmevahetuskanaleid (nagu SSL/TLS), eriti paroolide ja muude
 autoriseerimisandmete saatmisel.
