--- a/content/guidelines/027.md
+++ b/content/guidelines/027.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Turvalise SSL-andmeühenduskanali võib luua alles peale teenusserveri identiteedi
 kontrollimist, st mõlema suhtleva osapoole turvasertifikaatide usaldusväärsust
 on vaja enne andmete saatmist eelnevalt kontrollida.
