--- a/content/guidelines/030.md
+++ b/content/guidelines/030.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Lähiväljaside (NFC) kasutamisel tuleb pealtkuulamise riski vältimiseks kindlasti
 kasutada sideseansi ja võimalusel ka selles liikuvate andmete krüpteerimist.
 Kuigi NFC on disainitud ainult lähiväljasideks, mis peaks toimima paari
