--- a/content/guidelines/034.md
+++ b/content/guidelines/034.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Autentimise turvalisemaks muutmiseks on võimalik jälgida IP-aadresse ja
 vajadusel kasutada kontekstipõhiseid piiranguid – nt lubada autentimist ainult
 kindlaksmääratud piirkonnast (IP-aadresside vahemiku asukoha põhiselt).
