--- a/content/guidelines/036.md
+++ b/content/guidelines/036.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Kuna nutiseadmel võib olla mitu kasutajat, siis tuleb lähtuda põhimõttest, et
 kontrollitakse seadme kasutaja identiteeti, ei piisa kasutatava seadme
 identifitseerimisest.
