--- a/content/guidelines/041.md
+++ b/content/guidelines/041.md
@@ -1,4 +1,6 @@
-
+---
+category: network
+---
 Tuleb tagada, et teenusserverid töötaksid tugevdatud (hardened)
 konfiguratsiooniga, kus operatsioonisüsteemile, veebiserverile ja muudele
 rakenduse komponentidele on paigaldatud uusimad turvapaigad, nendesse ei ole
