--- a/content/guidelines/042.md
+++ b/content/guidelines/042.md
@@ -1,3 +1,6 @@
+---
+category: authentication
+---
 Tuleb tagada, et teenusserverites säilitatakse piisavad logid (vajadusel ka
 klient-rakenduste logid) intsidentide avastamiseks ja neile reageerimiseks ning
 võimalike ekspertiiside tegemiseks (isikuandmete kaitseseadusega lubatud
