--- a/content/guidelines/044.md
+++ b/content/guidelines/044.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 Teenusservereid tuleb testida teenusetõkkerünnakute suhtes, et avastada juhud
 mille ilmnemise puhul intensiivselt ressursse kasutavad serveriteenused võivad
 põhjustada serveri ülekoormust.
