--- a/content/guidelines/051.md
+++ b/content/guidelines/051.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Tuleb kontrollida, kas rakendus kogub teavet mille alusel on võimalik kasutaja
 teadmata isikut tuvastada (see ei pruugi alati olla ilmne), näiteks kas
 kasutatakse unikaalseid identifikaatoreid (nt isikukood), mida kasutatakse ka
