--- a/content/guidelines/054.md
+++ b/content/guidelines/054.md
@@ -1,3 +1,6 @@
+---
+category: data
+---
 Parem on hoida kõiki kasutajaandmetega seotud kirjeid teenusserveri poolel.
 Niisuguste kirjete puhul tuleb miinimumini viia nendes kirjetes salvestatud
 isikuandmete hulk (ja nt kaitsta need räsimise vms teel).
