--- a/content/guidelines/056.md
+++ b/content/guidelines/056.md
@@ -1,2 +1,5 @@
+---
+category: app
+---
 Soovitav on rakendusse lisada andmed rakenduse tootja või omaniku kohta (sh
 üldised- ja kasutajatoe kontaktandmed).
