--- a/content/guidelines/061.md
+++ b/content/guidelines/061.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Kõikidele nutirakenduse sees raha eest teostatavatele ostudele tuleb saada
 kasutaja kinnitus. Samuti peab kasutajat hoiatama nende tegevuste puhul, mis
 eeldavad suuremahulist andmesideteenuse kasutamist (eriti roaming’u puhul) ning
