--- a/content/guidelines/065.md
+++ b/content/guidelines/065.md
@@ -1,3 +1,6 @@
+---
+category: app
+---
 Enamik rakendustepoode jälgib oma rakendusi ning on suutelised ebaturvalise
 koodi avastamisel ja ohu ilmnemisel rakendusi lühikese etteteatamisega ka
 kaugeemaldama. Rakenduste levitamine ametlike rakendusepoodide kaudu annab seega
