--- a/content/guidelines/076.md
+++ b/content/guidelines/076.md
@@ -1,3 +1,6 @@
+---
+category: network
+---
 X-tee teenuse pakkuja peab tagama, et nutirakendusest X-tee teenusesse
 saadetavad kasutajat identifitseerivad sõnumi elemendid on korrektselt täidetud
 (eelkõige userID, Authenticatior), nii nagu kirjeldatud X-tee 5 rakendusjuhendis
