--- a/content/guidelines/079.md
+++ b/content/guidelines/079.md
@@ -1,3 +1,6 @@
+---
+category: ux
+---
 Rakenduse laadimisaeg peaks olema võimalikult lühike. Vältida võiks
 käivitusaegset eraldi ekraanipilti ja kui on võimalik, siis aeganõudvad
 toimingud võiks käia taustaprotsessidena.
